# test-repo

./: .gitignore  .pr_agent.toml  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  setup.bat
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/scripts/: rename.sh  update_docs.py
.github/workflows/: assets_pr_labeler.yml  configure_template.yml  dev_versioning.yml  docs_regulator.yml  pr_agent.yml  release.yml
docs/: index.md
